--- a/css/layout.css
+++ b/css/layout.css
@@ -767,10 +767,11 @@ call-to-action .button {
 #contact a:hover, #contact a:focus { color: #fff; }
 
 #contact h1 {
-   font: 18px/24px 'opensans-bold', sans-serif;
+   font: 18px 'opensans-bold', sans-serif;
    text-transform: uppercase;
    letter-spacing: 3px;
    color: white;
+   padding-left: 50px;
    margin-bottom: 6px;
 }
 #contact h1 span { display: none; }
